Fix hover on mobile devices

--- a/src/app/browser/browser.component.css
+++ b/src/app/browser/browser.component.css
@@ -45,12 +45,11 @@ mat-spinner {
 #image-shadow {
   height: inherit;
   position: absolute;
-  background-image: linear-gradient(to bottom,rgba(0,0,0,0.26),transparent 56px,transparent);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.26), transparent 56px, transparent);
   opacity: 0;
 }
 
-@media (pointer: none) {
-  #image-shadow {
-    visibility: hidden;
-  }
+#image-shadow.touchScreen {
+  visibility: hidden;
 }
+
